# mlworkflow

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: python-app.yml
mlworkflow/: __init__.py  configurable.py  data_freezing.py  datasets.py  file_handling.py  misc.py  visualization.py
mlworkflow/v1/: __init__.py  configurable.py  data_collection.py  datasets.py  hacks.py  json_handling.py  misc.py  visualization.py
tests/: test_configurable.py  test_datacollection.py  test_datasets.py  test_djsonc.py  test_dummy.py
